# youtubeMusicDownloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
api/: main.py
api/static/: app.js  index.html
app/: desktop.py  main.py
core/: config.py  downloader.py  folders.py  models.py  playlist.py  queue.py  ytdlp_opts.py
tests/: conftest.py  test_api.py  test_downloader.py  test_models.py  test_playlist.py  test_queue.py  test_ytdlp_opts.py
ui/: playlist_dialog.py  styles.py
ui/styles/: app.qss
